# voice-to-text

./: .gitignore  CLAUDE.md  README.md  output.json  phase1-plan.md  phase2-plan.md  phase2-user-experience.md  phase3-plan.md  phase3-user-experience.md  plan-v2.md  plan.md  progress.md  pyproject.toml  requirements.txt  run.sh  speech_to_text_streaming_infer_rnnt.py  test_client.html  test_output.json  test_output_speech.json  test_service.py
.claude/: settings.local.json
loadtests/: BASELINE_RESULTS.md  locustfile.py  run_baseline.sh
loadtests/audio/: audio_provider.py  download_audio.py
loadtests/results/: baseline_20260201_195831.html  baseline_20260201_195831_stats.csv  baseline_20260201_195831_stats_history.csv
src/: asr_engine.py  audio_processor.py  config.py  endpointing.py  main.py  session.py
src/transcription_service/: __init__.py  config.py  dependencies.py  main.py
src/transcription_service/api/: health.py  sessions.py  stream.py  transcribe.py
src/transcription_service/core/: __init__.py  asr_protocol.py  audio_utils.py  mock_asr.py  models.py  nemo_asr.py  session.py  session_manager.py  text_generator.py  vad.py
tests/: conftest.py  test_asr_engine.py  test_asr_protocol.py  test_audio_processor.py  test_audio_utils.py  test_concurrent.py  test_endpointing.py  test_health.py  test_models.py  test_nemo_asr.py  test_nemo_integration.py  test_session.py  test_session_api.py  test_session_lifecycle.py  test_session_manager.py  test_stream.py  test_transcribe.py  test_vad_refactor.py
