[project]
name = "voice-to-text"
version = "0.1.0"
description = "Scalable transcription service backend"
requires-python = ">=3.10"
dependencies = [
    # FastAPI and web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Voice activity detection
    "webrtcvad>=2.0.10",
    "setuptools",  # Required by webrtcvad for pkg_resources
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "websockets>=14.0",
    "locust>=2.43.1",
    "websocket-client>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcription_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
